Minor spacing correction

--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 5px;
-  margin: 0 0 5px 0;
+  margin: 0 0 0px 0;
   background-color: rgb(140, 140, 140);
 }
 
@@ -55,6 +55,7 @@
   display: flex;
   flex-direction: column;
   padding: 5px 0 5px 5px;
+  margin-top: 5px;
 }
 
 .editJobRole {
